fix: remove flickering of some elements when changing theme

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,7 +27,7 @@
 }
 
 /* color animations */
-* {
+*:not(p, a, span) {
   @apply transition-colors duration-200;
 }
 
